Fixed vc-tree layout bugs. Fixed refresh function. Drag mode customizable

--- a/src/main/less/vcomet/ui/vc-tree/vc-tree.less
+++ b/src/main/less/vcomet/ui/vc-tree/vc-tree.less
@@ -7,7 +7,7 @@
   }
   .@{element}-tree {
     position: relative;
-    padding: 10px 0px;
+    padding: 0;
     display: flex;
     font-weight: bold;
     flex-direction: column;
