--- a/src/main/less/vcomet/ui/vc-treenode/vc-treenode.less
+++ b/src/main/less/vcomet/ui/vc-treenode/vc-treenode.less
@@ -7,8 +7,12 @@
     flex-grow: 1;
     margin: 0 5px 0 0;
     overflow: hidden;
-    -webkit-user-drag: element;
     user-select: none;
+  }
+  .@{element}-draggable { 
+    user-drag: element;
+    -moz-user-select: element;
+    -webkit-user-drag: element;
   }
   .@{element}-head { 
     display: flex;
